src/test/fail/bad_comma.ly
#[
SyntaxError: Unexpected token ,.
Where: File "test/fail/bad_comma.ly" at line 6
]#

var a = 10    a = 10,
